<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menuFav"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/menuprofile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/menufaq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/menulogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>