<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/onePieceLogo"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:src="@drawable/twitter_profile_image" />

    <EditText
        android:id="@+id/mobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onePieceLogo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_mobile_no"
        android:inputType="phone"
        android:maxLength="10"
        android:background="#c7c7c7"
        android:textSize="22dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobileNo"
        android:layout_marginHorizontal="20dp"
        android:background="#c7c7c7"
        android:layout_marginTop="20dp"
        android:textSize="22dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/logInButt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="100dp"
        android:background="#dd2c00"
        android:gravity="center"
        android:text="LOGIN"
        android:textColor="#fff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@+id/password"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:textAlignment="center"
        android:filterTouchesWhenObscured="true"
        />
    <TextView
        android:id="@+id/register"
        android:filterTouchesWhenObscured="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        />


</RelativeLayout>